[package]
name = "four-cc"
version = "0.3.1-dev"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"
description = "Newtype wrapper providing a convenient representation of four-character-code values"
repository = "https://github.com/dholroyd/four-cc"
license = "MIT/Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { version = "0.8.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
zerocopy = { version = "0.7.0", optional = true }

[dev-dependencies]
serde_test = "1.0"

[features]
default = ["std"]
nightly = []
std = []
